gccida/g1/cse_basic_block
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_basic_block/src/cse.c:7666:1: error: must use 'enum' tag to refer to type 'taken'
taken status; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_basic_block/src/cse.c:7670:4: error: expected ';' after expression
rtx v20; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_basic_block/src/cse.c:7670:5: error: use of undeclared identifier 'v20'; did you mean 'v10'?
rtx v20; // rax 
    ^~~
    v10
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_basic_block/src/cse.c:7660:6: note: 'v10' declared here
char v10; // al 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_basic_block/src/cse.c:7671:4: error: expected ';' after expression
rtx reg_note; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_basic_block/src/cse.c:7671:5: error: must use 'enum' tag to refer to type 'reg_note'
rtx reg_note; // rax 
    ^
    enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_basic_block/src/cse.c:7673:4: error: expected ';' after expression
rtx v23; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_basic_block/src/cse.c:7673:5: error: use of undeclared identifier 'v23'
rtx v23; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_basic_block/src/cse.c:7675:4: error: expected ';' after expression
rtx v25; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_basic_block/src/cse.c:7675:5: error: use of undeclared identifier 'v25'
rtx v25; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_basic_block/src/cse.c:7676:4: error: expected ';' after expression
rtx nonnote_insn; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_basic_block/src/cse.c:7676:5: error: use of undeclared identifier 'nonnote_insn'
rtx nonnote_insn; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_basic_block/src/cse.c:7678:4: error: expected ';' after expression
rtx v28; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_basic_block/src/cse.c:7678:5: error: use of undeclared identifier 'v28'
rtx v28; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_basic_block/src/cse.c:7684:5: error: invalid operands to binary expression ('struct rtx_def *' and 'double (double)')
rtx *exp; // rdi 
~~~ ^~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_basic_block/src/cse.c:7740:1: error: use of undeclared identifier 'nonnote_insn'
nonnote_insn = prev_nonnote_insn( to); 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_basic_block/src/cse.c:7744:1: error: use of undeclared identifier 'v23'
v23 = to; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_basic_block/src/cse.c:7746:8: error: use of undeclared identifier 'v23'
return v23; 
       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_basic_block/src/cse.c:7753:17: error: use of undeclared identifier 'nonnote_insn'
if ( *( _WORD *)nonnote_insn != 33 ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_basic_block/src/cse.c:7755:17: error: use of undeclared identifier 'nonnote_insn'
v29 = ( __int64)nonnote_insn[4]; 
                ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_basic_block/src/obj/cse.o] Error 1
